fix: Fix gradient height to reduce visual shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,10 +15,11 @@ body {
 }
 
 body > div {
-  background: linear-gradient(
+  background-size: 100% 1000px;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(
     12deg,
     rgba(0, 0, 0, 0) 50%,
-    var(--teal-2) 90%,
     var(--teal-4) 100%
   );
 }
